frontend/test/should_pass/basic_202.grg
rule r {
	negative {
		if{ true; }
	}

	modify {
	}
}

